--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <title>PhotoWick</title>
   </head>
   <body>
+    <script src=""></script>
     <div id="app"></div>
     <script src="/bundle.js"></script>
   </body>
